# Schedule-app

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  test_connection.py
migrations/: env.py
migrations/versions/: 2026_07_15_2318-8c710e86b93e_create_users_and_provider_accounts.py  2026_07_16_1400-c5bdfbba2c9a_encrypt_tokens_as_text.py  2026_07_22_2345-f4c9a7b7f59c_add_need_reauth.py
src/: config.py
src/agent/: orchestrator.py  prompts.py
src/auth/: encryption.py
src/db/: base.py  engine.py  session.py
src/models/: __init__.py  provider_account.py  user.py
src/repositories/: provider_account_repository.py  user_repository.py
src/tools/: schemas.py
